# Rcompiler

./: .temp_stderr.txt  AST_node.cpp  AST_node.h  CMakeLists.txt  Makefile  Readme.md  builtin.c  ir.cpp  ir.h  main.cpp  parser.h  semantic check.h  semantic_check.cpp  semantic_check.h  tokenizer.h
.github/workflows/: ci.yml
test/: CMakeLists.txt  test.cpp
test/my-testcases/: CMakeLists.txt  test.cpp  type2.txt
test/my-testcases/testcases/: array1.txt  array2.txt  impl1.txt  return1.txt  return2.txt  type1.txt  type2.txt
test/testcases/: type1.txt
test/wxzheng/: CMakeLists.txt  auto-crawl.py  test.cpp
test/wxzheng/testcases/: array1.rx  array2.rx  array3.rx  basic1.rx  basic10.rx  basic11.rx  basic12.rx  basic15.in  basic15.rx  basic17.rx  basic18.rx  basic19.rx  basic20.rx  basic22.rx  basic23.rx  basic24.rx  basic25.rx  basic26.rx  basic27.rx  basic29.rx  basic36.rx  basic37.rx  basic39.rx  basic4.rx  basic40.rx  basic5.rx  comprehensive18.in  comprehensive20.in  comprehensive24.in  comprehensive26.in  comprehensive29.in  comprehensive30.in  comprehensive33.in  comprehensive38.in  comprehensive8.in  expr17.rx  expr19.rx  expr33.rx  expr34.rx  expr36.rx  (+76 more)
